--- a/about.html
+++ b/about.html
@@ -43,43 +43,43 @@
     <p>The Council has the highest authority over the Meower Project. Here they are listed in order of importance.</p>
 
     <div class="team-member">
-      <img src="assets/mike.jpeg" alt="MikeDEV">
+      <img src="https://github.com/MikeDev101.png" alt="MikeDEV">
       <h3>MikeDEV</h3>
       <p>The Ducklord. Chief Executive Officer and Backend Sysadmin.</p>
     </div>
 
     <div class="team-member">
-      <img src="assets/tnix.jpg" alt="tnix's profile picture">
+      <img src="https://github.com/tnix100.png" alt="Tnix's profile picture">
       <h3>Tnix</h3>
       <p>Database Wizard and Assistant.</p>
     </div>
 
     <div class="team-member">
-      <img src="assets/silver.png" alt="silvxrcat's profile picture">
+      <img src="https://github.com/silvxrcat.png" alt="silvxrcat's profile picture">
       <h3>silvxrcat</h3>
       <p>Original Meower Founder. "boing".</p>
     </div>
 
     <div class="team-member">
-      <img src="assets/cst.png" alt="CST's profile picture">
+      <img src="https://github.com/CST1229.png" alt="CST1229's profile picture">
       <h3>CST1229</h3>
-      <p>"I originally created the <a href="app.meower.org">app.meower.org</a> client. uh"</p>
+      <p>"I originally created the <a href="https://app.meower.org">app.meower.org</a> client. uh"</p>
     </div>
 
     <div class="team-member">
-      <img src="assets/zed.png" alt="zedthehedgehog">
+      <img src="https://github.com/zedthehedgehog.png" alt="zedthehedgehog's profile picture">
       <h3>zedthehedgehog</h3>
       <p>Designing at Meower since 2020!</p>
     </div>
 
     <div class="team-member">
-      <img src="assets/lilCatBlock-01.png" alt="DaCatBlock">
+      <img src="https://github.com/HAZARD6896.png" alt="DaCatBlock's profile picture">
       <h3>DaCatBlock</h3>
       <p>Web Developer and supporter for Meower since late 2021!</p>
     </div>
 
     <div class="team-member">
-      <img src="assets/voxalice.png" alt="voxalice">
+      <img src="https://github.com/Voxalice.png" alt="Voxalice's profile picture">
       <h3>Voxalice</h3>
       <p>Musician for Meower since 2020!</p>
     </div>
@@ -89,28 +89,38 @@
     <h2 style="color: #10b11b; text-align: center;">Moderators</h2>
     <div class="moderators">
       <div class="item">
-        <img src="moderators/eris.jpg" alt="3r1s_s">
+        <img src="https://github.com/3r1s-s.png" alt="3r1s_s' profile picture">
         <h3>3r1s_s</h3>
       </div>
 
       <div class="item">
-        <img src="moderators/eskay.jpg" alt="Eskay">
+        <img src="https://github.com/meguy7878.png" alt="Eskay's profile picture">
         <h3>Eskay</h3>
       </div>
 
       <div class="item">
-        <img src="moderators/hades.jpg" alt="theotherhades">
+        <img src="https://github.com/theotherhades.png" alt="theotherhades' profile picture">
         <h3>theotherhades</h3>
       </div>
 
       <div class="item">
-        <img src="moderators/plates.jpg" alt="PlatesOfSandwiches">
+        <img src="https://github.com/PlatesOfSandwiches.png" alt="PlatesOfSandwiches' profile picture">
         <h3>PlatesOfSandwiches</h3>
       </div>
 
       <div class="item">
-        <img src="moderators/showier.jpg" alt="ShowierData">
-        <h3>ShowierData</h3>
+        <img src="https://github.com/showierdata9978.png" alt="ShowierData9978's profile picture">
+        <h3>ShowierData9978</h3>
+      </div>
+
+      <div class="item">
+        <img src="https://github.com/Touchcreator.png" alt="Touchcreator's profile picture">
+        <h3>Touchcreator</h3>
+      </div>
+
+      <div class="item">
+        <img src="https://github.com/ArrowAced.png" alt="Arrow's profile picture">
+        <h3>Arrow</h3>
       </div>
 
       <!-- Add more items as needed -->
