--- a/about.html
+++ b/about.html
@@ -123,6 +123,11 @@
         <h3>Arrow</h3>
       </div>
 
+      <div class="item">
+        <img src="https://app.meower.org/assets/icon_32.b04ea763.svg" alt="Arrow's profile picture">
+        <h3>LordPenguin</h3>
+      </div>
+
       <!-- Add more items as needed -->
     </div>
   </main>
