--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="team-member">
-      <img src="https://github.com/silvxrcat.png" alt="silvxrcat's profile picture">
+      <img src="https://github.com/qbjl.png" alt="silvxrcat's profile picture">
       <h3>silvxrcat</h3>
       <p>Original Meower Founder. "boing".</p>
     </div>
