--- a/live.html
+++ b/live.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Meower Live Tracker</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" href="icons/meowyicon.svg" type="image/x-icon">
+  <title>Meower | Live</title>
 </head>
 
 <body>
