--- a/404.html
+++ b/404.html
@@ -26,6 +26,7 @@
         <a href="https://wiki.meower.org/wiki/Home"><img src="icons/book-marked.svg">Wiki</a>
         <a href="https://github.com/meower-media-co"><img src="icons/github.svg">GitHub</a>
         <a href="legal.html"><img src="icons/scale.svg">Legal</a>
+	<a href="live.html"><img src="icons/rocket.svg">Live</a>
       </div>
     </div>
   </nav>
