--- a/live.html
+++ b/live.html
@@ -33,9 +33,9 @@
 
   <main>
     <h1>Meower Live Tracker</h1>
-    <h2 id='users'>Users: fetching...</h2>
-    <h2 id='posts'>Posts: fetching...</h2>
-    <h2 id='chats'>Chats: fetching...</h2>
+    <p id='users'>Users: fetching...</p>
+    <p id='posts'>Posts: fetching...</p>
+    <p id='chats'>Chats: fetching...</p>
   </main>
   <footer>
     <p>&copy; 2020 -
