--- a/live.html
+++ b/live.html
@@ -33,9 +33,9 @@
 
   <main>
     <h1>Meower Live Tracker</h1>
-    <p id='users'>Users: fetching...</p>
-    <p id='posts'>Posts: fetching...</p>
-    <p id='chats'>Chats: fetching...</p>
+    <p id='users' style="font-size: 30px;">Users: fetching...</p>
+    <p id='posts' style="font-size: 30px;">Posts: fetching...</p>
+    <p id='chats' style="font-size: 30px;">Chats: fetching...</p>
   </main>
   <footer>
     <p>&copy; 2020 -
