--- a/live.html
+++ b/live.html
@@ -34,24 +34,30 @@
 
   <main>
     <h1>Meower Live Tracker</h1>
-    <div class="tick" id="posts" data-value="fetching...">
-      <div data-repeat="true" aria-hidden="true">
-        Posts:
-        <span data-view="flip"></span>
+    <section>
+      <div class="tick" id="posts" data-value="fetching...">
+        <div data-repeat="true" aria-hidden="true">
+          Posts:
+          <span data-view="flip"></span>
+        </div>
       </div>
-    </div>
-    <div class="tick" id="users" data-value="fetching...">
-      <div data-repeat="true" aria-hidden="true">
-        Users:
-        <span data-view="flip"></span>
+    </section>
+    <section>
+      <div class="tick" id="users" data-value="fetching...">
+        <div data-repeat="true" aria-hidden="true">
+          Users:
+          <span data-view="flip"></span>
+        </div>
       </div>
-    </div>
-    <div class="tick" id="chats" data-value="fetching...">
-      <div data-repeat="true" aria-hidden="true">
-        Chats:
-        <span data-view="flip"></span>
+    </section>
+    <section>
+      <div class="tick" id="chats" data-value="fetching...">
+        <div data-repeat="true" aria-hidden="true">
+          Chats:
+          <span data-view="flip"></span>
+        </div>
       </div>
-    </div>
+    </section>
   </main>
   <footer>
     <p>&copy; 2020 -
