--- a/live.html
+++ b/live.html
@@ -35,15 +35,15 @@
   <main>
     <h1>Meower Live Tracker</h1>
     <section>
-      <div class="tick" id="posts" data-value="fetching...">
+      <div class="tick" id="posts" data-value="------">
         <div data-repeat="true" aria-hidden="true">
-          Posts:
+          Posts: 
           <span data-view="flip"></span>
         </div>
       </div>
     </section>
     <section>
-      <div class="tick" id="users" data-value="fetching...">
+      <div class="tick" id="users" data-value="------">
         <div data-repeat="true" aria-hidden="true">
           Users:
           <span data-view="flip"></span>
@@ -51,7 +51,7 @@
       </div>
     </section>
     <section>
-      <div class="tick" id="chats" data-value="fetching...">
+      <div class="tick" id="chats" data-value="------">
         <div data-repeat="true" aria-hidden="true">
           Chats:
           <span data-view="flip"></span>
