changed my username

--- a/about.html
+++ b/about.html
@@ -67,9 +67,9 @@
     </div>
 
     <div class="team-member">
-      <img src="https://github.com/zedthehedgehog.png" alt="zedthehedgehog's profile picture">
-      <h3>zedthehedgehog</h3>
-      <p>Designing at Meower since 2020!</p>
+      <img src="https://github.com/zedsleepyhead.png" alt="zedsleepyhead's profile picture">
+      <h3>zedsleepyhead</h3>
+      <p>Designing at Meower since 2020</p>
     </div>
 
     <div class="team-member">
