fix LordPenguin's pfp

--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
       </div>
 
       <div class="item">
-        <img src="https://app.meower.org/assets/icon_32.b04ea763.svg" alt="LordPenguin's profile picture">
+        <img src="https://github.com/RealLordPenguin.png" alt="LordPenguin's profile picture">
         <h3>LordPenguin</h3>
       </div>
 
