--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
     </div>
 
     <h2 style="color: #c63f3f; text-align: center;">Council Members</h2>
-    <p>The Council has the highest authority over the Meower Project. Here they are listed in order of importance.</p>
+    <p>The Council has the highest authority over the Meower Project. Here they are listed in order of power.</p>
 
     <div class="team-member">
       <img src="https://github.com/MikeDev101.png" alt="MikeDEV">
