Update CSS, Legal, Council, and Legal Nutshell
^

--- a/about.html
+++ b/about.html
@@ -39,8 +39,9 @@
       <p>Our Official Mascot! You never know where you will find them, so keep a look out.</p>
     </div>
 
-    <h2 style="color: #c63f3f; text-align: center;">Council Members</h2>
+    <h2 style="color: #c63f3f">Council Members</h2>
     <p>The Council has the highest authority over the Meower Project. Here they are listed in order of power.</p>
+	<br>
 
     <div class="team-member">
       <img src="https://github.com/MikeDev101.png" alt="MikeDEV">
