--- a/legal-nutshell.html
+++ b/legal-nutshell.html
@@ -1,95 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="assets/meowy.jpg" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <title>Meower | Home</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Meower | Legal</title>
+	<link rel="shortcut icon" href="icons/meowyicon.svg" type="image/x-icon">
+	<link rel="stylesheet" href="style.css">
 </head>
-
+  
 <body>
-  <header>
-    <a href="index.html"><img src="assets/meowerlogo-white.svg" alt="Meower Header"></a>
-  </header>
+	<header>
+		<a href="index.html"><img src="assets/meowerlogo-white.svg"></a>
+	</header>
 
-  <nav class="sticky">
-    <a href="index.html"><i class="fas fa-home icon"></i>Home</a>
-    <a href="https://app.meower.org"><i class="fas fa-rocket icon"></i>Launch</a>
-    <a href="aboutus.html"><i class="fas fa-info-circle icon"></i>About Us</a>
+	<nav class="sticky">
+		<a href="index.html"><img src="icons/home.svg">Home</a>
+		<a href="https://app.meower.org"><img src="icons/rocket.svg">Launch</a>
+		<a href="about.html"><img src="icons/help-circle.svg">About Us</a>
 
-    <div class="dropdown">
-      <button class="dropbtn"><i class="fas fa-ellipsis-h icon"></i>More</button>
-      <div class="dropdown-content">
-        <a href="https://forums.meower.org/"><i class="fas fa-comments icon"></i>Forums</a>
-        <a href="https://wiki.meower.org/wiki/Home"><i class="fas fa-book icon"></i>Wiki</a>
-        <a href="https://github.com/meower-media-co"><i class="fab fa-github icon"></i>GitHub</a>
-        <a href="legal.html"><i class="fas fa-gavel icon"></i>Legal</a>
-      </div>
-    </div>
-  </nav>
+		<div class="dropdown">
+			<button class="dropbtn"><img src="icons/more-horizontal.svg">More</button>
+			<div class="dropdown-content">
+				<a href="https://forums.meower.org/"><img src="icons/users-2.svg">Forums</a>
+				<a href="https://wiki.meower.org/wiki/Home"><img src="icons/book-marked.svg">Wiki</a>
+				<a href="https://github.com/meower-media-co"><img src="icons/github.svg">GitHub</a>
+				<a href="legal.html"><img src="icons/scale.svg">Legal</a>
+			</div>
+		</div>
+	</nav>
 
   <main>
-	<!-- Summarized legal page made by the Ducklord -->
-	<br>
+    <br>
     <section>
-      <h1 class="title">Meower Legal (In a nutshell)</h1>
-      <p>Last updated 11 June 2023</p>
-    </section>
-	<br>
-	<section>
-      <h1 class="title" style='color: red;'>Important Notice</h1>
-      <p class="body">This page is a summary of Meower's legal page. It is not a substitute. It is encouraged that you read and understand the legal page during account setup.</p>
-	</section>
-	<br>
-	<section>
-      <h1 class="title">Basic Rules</h1>
-      <p class="body">You should always follow these rules when using Meower. Failing to do so can result in moderator action, such as kicks, bans, or terminations.<br></p>
-      <br>
-      <p class="body"><i>If you're under 13, we'll need you to get permission from a parent or legal guardian before you can sign up!</i></p>
-      <br>
-      <p class="body"><b style='color: red;'>Always</b> make sure you respect others' rights and privacy. Don't share their personal info without permission.</p>
-      <br>
-      <p class="body"><b style='color: red;'>Always</b> keep any posts, comments, messages or threads "Rated E for everyone" friendly, and never share pornographic or vulgar content.</p>
-      <br>
-      <p class="body"><b style='color: red;'>Always</b> respect the will of other users on Meower. For example, if someone asks you to delete a parody account that involves them, you should always do so.</p>
-      <br>
-      <p class="body"><b style='color: red;'>Always</b> respect intellectual property rights. No copyrighted content should be shared unless you have explicit written permission to share said content.</p>
-      <br>
-      <p class="body"><b style='color: red;'>Never</b> spam on Meower. This includes making multiple posts in a short period of time.</p>
-      <br>
-      <p class="body"><b style='color: red;'>Don't</b> scam people on Meower. This includes links that steal people's information (phishing).</p>
-      <br>
-      <p class="body"><b style='color: red;'>Don't</b> impersonate people on Meower. All parody accounts should state that they are parodies in their quote or username.</p>
-      <br>
-      <p class="body"><b style='color: red;'>Don't</b> harass people on Meower. Any harassment will result in a ban.</p>
-	</section>
-	<br>
-	<section>
-      <h1 class="title">Your Privacy</h1>
-      <p class="body">We will never collect any personal information, such as real names, dates of birth, gender info, or location data.</p>
-      <br>
-      <p class="body">When you use Meower, your IP address will be shared with IPHub for moderation purposes. This is to help prevent ban evasion with VPNs and proxies, as well as preventing certain users from using Meower.</p>
+		<h1 class="title" id="This-page-was-sent-to-the-shadow-realm">This page was sent to the shadow realm!</h1>
+		<p>In 10 seconds, you will be redirected to our legal page.</p>
 		<br>
-      <p class="body">All Meower traffic is passed through Cloudflare to help protect our servers from DDoS attacks and other malicious activity. Cloudflare's privacy policy is available <a href="https://www.cloudflare.com/privacypolicy/">here.</a></p>
-      <br>
-      <p class="body">We only collect info we need to help run our service, including your username, a hashed version of your password, quote, profile picture, your posts, comments, messages, and failed account login attempts (for security).</p>
-      <br>
-      <p class="body">We will notify you of all policy updates and data breaches in the event that they occur.</p>
-	</section>
-	<!-- Content policy section was trash, so I removed it. - Mike -->
+		<img src="assets/shadow-realm.png" class="center" style="max-width: 100%;">
+		<meta http-equiv="refresh" content="10; URL=legal.html" />
+    </section>
   </main>
-  <footer>
-    <p>&copy; 2020 -
-      <script type="text/javascript">document.write(new Date().getFullYear());</script> Meower Media
-    </p>
-  </footer>
 
-  <!-- Add your script tags for any JavaScript files here -->
+	<footer>
+		<p>&copy; 2020 -
+			<script type="text/javascript">document.write(new Date().getFullYear());</script> Meower Media
+		</p>
+	<button class="theme-switcher-button" id="theme-switcher-button"><img src="icons/palette.svg"></button>
+	</footer>
+
+	<script src="themes.js"></script>
 
 </body>
-
 </html>
-
