--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="shortcut icon" href="icons/meowyicon.svg" type="image/x-icon">
   <title>Meower | Home</title>
 </head>
-<script src="https://uptime.betterstack.com/widgets/announcement.js" data-id="148703" async="async" type="text/javascript"></script>
+<script src="https://meower.org/announcement.js" async="async" type="text/javascript"></script>
+<link type="text/css" rel="stylesheet" href="https://meower.org/announcement.css">
 <body class="style1">
   <header>
     <a href="index.html"><img src="assets/meowerlogo-white.svg" alt="Meower Header"></a>
