--- a/discord.html
+++ b/discord.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="icons/meowyicon.svg" type="image/x-icon">
   <title>Meower | Discord</title>
+  <script src="https://meower.org/announcement.js" async="async" type="text/javascript"></script>
+  <link type="text/css" rel="stylesheet" href="https://meower.org/announcement.css">
 </head>
 
 <body>
