--- a/legal.html
+++ b/legal.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Meower | Legal</title>
+	<script src="https://meower.org/announcement.js" async="async" type="text/javascript"></script>
+	<link type="text/css" rel="stylesheet" href="https://meower.org/announcement.css">
 	<link rel="shortcut icon" href="icons/meowyicon.svg" type="image/x-icon">
 	<link rel="stylesheet" href="style.css">
 </head>
