fix: Remove wiki from website

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
       <button class="dropbtn"><img src="icons/more-horizontal.svg">More</button>
       <div class="dropdown-content">
         <a href="https://forums.meower.org/"><img src="icons/users-2.svg">Forums</a>
-        <a href="https://wiki.meower.org/wiki/Home"><img src="icons/book-marked.svg">Wiki</a>
         <a href="https://github.com/meower-media-co"><img src="icons/github.svg">GitHub</a>
         <a href="legal.html"><img src="icons/scale.svg">Legal</a>
       </div>
@@ -48,7 +47,7 @@
       <h1>Original</h1>
       <p>Meower started life as a Scratch 3.0-based social media platform. We have a long history, too! With the
         continuous support of our amazing community, we've evolved into a feature-rich platform for creators of all
-        kinds. Explore our <a href="https://wiki.meower.org/wiki/Home">wiki</a> to learn more about our journey.</p>
+        kinds.
     </section>
 
     <section>
