--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
   <main>
     <section>
       <h1>Welcome!</h1>
-      <p>Meower is a free, open-source, and nonprofit social media platform free of tracking, ads, and data collection.
-        Join our community today and start connecting with like-minded individuals.</p>
+      <p>Meower is an innovative non-profit, open-source social media platform that prioritizes user privacy through an 
+        ad-free experience and by never using data tracking software or selling your data. Join our community today and
+          start connecting with like-minded individuals.</p>
     </section>
 
     <section>
