Made a mistake on the last commit (updating phrasing under welcome)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section>
       <h1>Welcome!</h1>
       <p>Meower is an innovative non-profit, open-source social media platform that prioritizes user privacy through an 
-        ad-free experience and by never using data tracking software or selling your data. Join our community today and
+        ad-free experience and by never collecting and selling your data. Join our community today and
           start connecting with like-minded individuals.</p>
     </section>
 
