--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
   <main>
     <section>
       <h1>Welcome!</h1>
-      <p>Meower is an innovative non-profit, open-source social media platform that prioritizes user privacy through an 
-        ad-free experience and by never collecting and selling your data. Join our community today and
-          start connecting with like-minded individuals.</p>
+      <p>Meower is an innovative non-profit and open-source social media platform that prioritizes user privacy by never
+          selling your data, never collecting more than we need to, and never displaying ads. Join our community today and
+            start connecting with like-minded individuals.</p>
     </section>
 
     <section>
       <h1>Safe for All</h1>
       <p>A friendly place to be. We are committed to keeping Meower safe and welcoming for <em>all</em>. Our dedicated
         team works tirelessly to enforce community guidelines and ensure a positive experience for everyone.</p>
-    </section>
+    </section>uj
 
     <section>
       <h1>Original</h1>
