--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h1>Safe for All</h1>
       <p>A friendly place to be. We are committed to keeping Meower safe and welcoming for <em>all</em>. Our dedicated
         team works tirelessly to enforce community guidelines and ensure a positive experience for everyone.</p>
-    </section>uj
+    </section>
 
     <section>
       <h1>Original</h1>
