--- a/about.html
+++ b/about.html
@@ -125,7 +125,11 @@
         <h3>LordPenguin</h3>
       </div>
 
-      <!-- Add more items as needed -->
+      <div class="item">
+        <img src="https://github.com/derpygamer2142.png" alt="LordPenguin's profile picture">
+        <h3>Derpygamer2142</h3>
+      </div>
+
     </div>
   </main>
   <footer>
