Fix alt-text of derpygamer2142's PFP & fix capitalization of derpygamer2142

--- a/about.html
+++ b/about.html
@@ -126,8 +126,8 @@
       </div>
 
       <div class="item">
-        <img src="https://github.com/derpygamer2142.png" alt="LordPenguin's profile picture">
-        <h3>Derpygamer2142</h3>
+        <img src="https://github.com/derpygamer2142.png" alt="derpygamer2142's profile picture">
+        <h3>derpygamer2142</h3>
       </div>
 
     </div>
