change my bio text
Signed-off-by: Tnix <tnix@meower.org>

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
     <div class="team-member">
       <img src="https://github.com/tnix100.png" alt="Tnix's profile picture">
       <h3>Tnix</h3>
-      <p>Database Wizard and Assistant.</p>
+      <p>boring annoying backend developer</p>
     </div>
 
     <div class="team-member">
