--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
     </section>
 
     <section>
+      <h1>User Friendly</h1>
+      <p>We have a safe and welcoming community that will guide youu through Meower! <a href="https://app.meower.org"
+          class="btn">Sign up</a></p>
+    </section>
+    
+    <section>
       <h1>Join the Community</h1>
       <p>Are you ready to join a vibrant community of creators and enthusiasts? <a href="https://app.meower.org"
           class="btn">Sign up</a> for a Meower account today and
