--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
       <h1>404 - Page Not Found</h1>
       <p>Whoops! It looks like you followed an invalid link... Or, you were just looking for cat pictures.</p>
 	  <br>
-	  <img src="assets/cat_disks.jpg" class="center" style="max-width: 100%;">
+	  <img src="assets/meowytree.svg" class="center" style="max-width: 100%;">
     </section>
   </main>
   <footer>
