--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <section>
       <h1>User Friendly</h1>
-      <p>We have a safe and welcoming community that will guide youu through Meower! <a href="https://app.meower.org"
+      <p>We have a safe and welcoming community that will guide you through Meower! <a href="https://app.meower.org"
           class="btn">Sign up</a></p>
     </section>
     
