chore: move eris to council

--- a/about.html
+++ b/about.html
@@ -80,6 +80,12 @@
     </div>
 
     <div class="team-member">
+      <img src="https://github.com/3r1s-s.png" alt="3r1s_s' profile picture">
+      <h3>3r1s_s</h3>
+      <p>I am the best</p>
+    </div>
+
+    <div class="team-member">
       <img src="https://github.com/Voxalice.png" alt="Voxalice's profile picture">
       <h3>Voxalice</h3>
       <p>Musician for Meower since 2020!</p>
@@ -89,11 +95,6 @@
 
     <h2 style="color: #10b11b; text-align: center;">Moderators</h2>
     <div class="moderators">
-      <div class="item">
-        <img src="https://github.com/3r1s-s.png" alt="3r1s_s' profile picture">
-        <h3>3r1s_s</h3>
-      </div>
-
       <div class="item">
         <img src="https://github.com/meguy7878.png" alt="Eskay's profile picture">
         <h3>Eskay</h3>
