chore: change eris text

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
     <div class="team-member">
       <img src="https://github.com/3r1s-s.png" alt="3r1s_s' profile picture">
       <h3>3r1s_s</h3>
-      <p>I am the best</p>
+      <p>Head of mod team, made Meowy redesign “i am the best 🏃‍♀️”</p>
     </div>
 
     <div class="team-member">
