--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 
   <main>
     <section>
+      <h1>ATTENTION</h1>
+      <p>Meower is currently experiencing a major server outage. We apologize for the inconvenience, and we will be
+          back online as soon as we can!</p>
+    </section>
+  
+    <section>
       <h1>Welcome!</h1>
       <p>Meower is an innovative non-profit and open-source social media platform that prioritizes user privacy by never
           selling your data, never collecting more than we need to, and never displaying ads. Join our community today and
